# PySIPNotifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
pysip_notifier/: __init__.py  app.py  config.py  log_stream.py  main.py  models.py  service.py  sip.py  tts.py
tests/: test_api.py  test_config.py  test_logs.py  test_sip.py
